2007-01-22 [colin]	2.7.1cvs50

	* src/procmsg.c
	* src/procmsg.h
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Allow moving spams to the account's trash
		instead of default one

2007-01-21 [colin]	2.7.1cvs49

	* src/ldapquery.c
	* src/ldapquery.h
		Revert a static function that shouldn't
		have been

2007-01-21 [colin]	2.7.1cvs48

	* src/ldapquery.c
	* src/ldapquery.h
		Same

2007-01-21 [colin]	2.7.1cvs47

	* src/procmsg.c
	* src/procmsg.h
		Same

2007-01-21 [colin]	2.7.1cvs46

	* src/common/socket.c
	* src/common/socket.h
		Same

2007-01-21 [colin]	2.7.1cvs45

	* src/crash.c
	* src/exporthtml.c
	* src/exporthtml.h
	* src/exportldif.c
	* src/exportldif.h
	* src/folder.c
	* src/folder.h
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/folderview.c
	* src/folderview.h
	* src/gedit-print.c
	* src/gedit-print.h
	* src/main.c
	* src/main.h
	* src/common/socket.c
	* src/common/socket.h
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
	* src/gtk/quicksearch.c
	* src/gtk/quicksearch.h
		Same

2007-01-21 [colin]	2.7.1cvs44

	* src/common/utils.c
	* src/common/utils.h
	* src/etpan/etpan-thread-manager.c
	* src/etpan/etpan-thread-manager.h
		Same (Funny that etpan_thread_unbind
		is called but not etpan_thread_bind)

2007-01-21 [colin]	2.7.1cvs43

	* src/addrselect.c
	* src/addrselect.h
	* src/codeconv.c
	* src/codeconv.h
	* src/compose.c
	* src/compose.h
	* src/etpan/Makefile.am
	* src/gtk/colorlabel.c
	* src/gtk/colorlabel.h
	* src/gtk/sslcertwindow.c
	* src/gtk/sslcertwindow.h
	* src/etpan/etpan-log.c ** REMOVED **
	* src/etpan/etpan-log.h ** REMOVED **
		Same

2007-01-20 [colin]	2.7.1cvs42

	* src/addritem.c
	* src/addritem.h
		Same

2007-01-20 [colin]	2.7.1cvs41

	* src/account.c
	* src/account.h
	* src/addrbook.c
	* src/addrbook.h
	* src/addrcache.c
	* src/addrcache.h
	* src/addrclip.c
	* src/addrclip.h
	* src/addressbook.c