@@ -2308,3 +2308,4 @@
 ( cvs diff -u -r 1.3.2.13 -r 1.3.2.14 src/ldapquery.c;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/ldapquery.h;  ) > 2.7.1cvs48.patchset
 ( cvs diff -u -r 1.3.2.14 -r 1.3.2.15 src/ldapquery.c;  cvs diff -u -r 1.4.2.8 -r 1.4.2.9 src/ldapquery.h;  ) > 2.7.1cvs49.patchset
 ( cvs diff -u -r 1.150.2.89 -r 1.150.2.90 src/procmsg.c;  cvs diff -u -r 1.60.2.39 -r 1.60.2.40 src/procmsg.h;  cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/plugins/bogofilter/bogofilter_gtk.c;  cvs diff -u -r 1.18.2.46 -r 1.18.2.47 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.23.2.35 -r 1.23.2.36 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 2.7.1cvs50.patchset
+( cvs diff -u -r 1.5.2.49 -r 1.5.2.50 src/gtk/gtkutils.c;  ) > 2.7.1cvs51.patchset
